--- a/app/src/main/res/menu/menu_transaction_item.xml
+++ b/app/src/main/res/menu/menu_transaction_item.xml
@@ -1,6 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_edit" android:title="ویرایش" />
-    <item android:id="@+id/menu_delete" android:title="حذف" />
-    <item android:id="@+id/menu_move" android:title="جابجایی" />
+
+    <item
+        android:id="@+id/action_edit"
+        android:title="ویرایش"
+        android:icon="@drawable/ic_edit"
+        android:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_delete"
+        android:title="حذف"
+        android:icon="@drawable/ic_delete"
+        android:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_move"
+        android:title="جابجایی"
+        android:icon="@drawable/ic_move"
+        android:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_settings"
+        android:title="تنظیمات"
+        android:icon="@drawable/ic_settings"
+        android:showAsAction="never" />
+
 </menu>
