--- a/app/src/main/res/drawable/ic_more_vertical.xml
+++ b/app/src/main/res/drawable/ic_more_vertical.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="#444"
-        android:pathData="M12,8a2,2 0 1,0 0,-4 2,2 0 0,0 0,4zm0,2a2,2 0 1,0 0,4 2,2 0 0,0 0,-4zm0,6a2,2 0 1,0 0,4 2,2 0 0,0 0,-4z"/>
+        android:fillColor="@color/button_blue"
+        android:pathData="M12,8a2,2 0 1,0 0,-4 2,2 0 0,0 0,4zm0,2a2,2 0 1,0 0,4 2,2 0 0,0 0,-4zm0,6a2,2 0 1,0 0,4 2,2 0 0,0 0,-4z" />
 </vector>
