--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,9 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/action_settings"
-        android:title="تنظیمات"
-        android:icon="@drawable/ic_settings"
-        android:showAsAction="always"
-        android:visible="true" />
+        android:id="@+id/menu_settings"
+        android:title="تنظیمات" />
+    <item
+        android:id="@+id/menu_about"
+        android:title="درباره برنامه" />
 </menu>
