--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp"
-    android:gravity="center"
-    android:background="@color/app_background">
+    android:padding="16dp">
 
-    <TextView
-        android:id="@+id/tvAbout"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/text_dark"
-        android:textSize="16sp"
-        android:lineSpacingExtra="4dp"
-        android:gravity="right"
-        android:layoutDirection="rtl" />
-</LinearLayout>
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:text="برنامه حساب نسخه ۱.۰\n© ۲۰۲۵"
+            android:textSize="16sp"
+            android:textColor="@color/text_dark"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+</ScrollView>
