--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,107 +1,29 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<!-- app/src/main/res/layout/activity_main.xml -->
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="12dp"
-    android:layoutDirection="rtl"
-    android:background="@color/app_background"
-    tools:context=".MainActivity">
+    android:background="#EAF3FF">
 
-    <!-- نوار بالایی -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="space_between|center_vertical">
-
-        <ImageButton
-            android:id="@+id/btnMenu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_more_vertical"
-            android:background="@android:color/transparent"
-            android:contentDescription="منو"
-            android:layout_gravity="start"
-            android:tint="@color/button_blue" />
-
-        <Button
-            android:id="@+id/btnAddTransaction"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="➕ افزودن تراکنش"
-            android:backgroundTint="@color/button_blue"
-            android:textColor="@color/button_text" />
-    </LinearLayout>
-
-    <!-- سربرگ جدول -->
-    <LinearLayout
-        android:id="@+id/headerRow"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingVertical="8dp"
-        android:background="@color/header_background">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="تاریخ"
-            android:textColor="@color/text_dark"
-            android:gravity="center"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="مبلغ (ریال)"
-            android:textColor="@color/text_dark"
-            android:gravity="center"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="بابت"
-            android:textColor="@color/text_dark"
-            android:gravity="center"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:text="توضیحات"
-            android:textColor="@color/text_dark"
-            android:gravity="center"
-            android:textStyle="bold" />
-    </LinearLayout>
-
-    <!-- لیست تراکنش‌ها -->
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewTransactions"
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="@color/list_background"
-        android:scrollbars="vertical"
-        tools:listitem="@layout/item_transaction" />
+        android:layout_height="match_parent"
+        android:layout_above="@+id/fabAdd"
+        android:layout_margin="12dp"
+        android:padding="4dp"
+        android:clipToPadding="false" />
 
-    <!-- بخش مانده -->
-    <TextView
-        android:id="@+id/tvBalance"
-        android:layout_width="match_parent"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabAdd"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="مانده: ۰ ریال"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:padding="8dp"
-        android:background="@color/balance_background"
-        android:textColor="@color/text_dark" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="20dp"
+        app:srcCompat="@drawable/ic_add"
+        android:contentDescription="Add"
+        app:tint="@android:color/white"
+        app:backgroundTint="#3A7AFE" />
 
-</LinearLayout>
+</RelativeLayout>
