--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,16 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!-- app/src/main/res/menu/main_menu.xml -->
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
     <item
         android:id="@+id/menu_settings"
-        android:title="تنظیمات ⚙️"
-        android:icon="@android:drawable/ic_menu_preferences"
-        android:showAsAction="never" />
-
-    <item
-        android:id="@+id/menu_about"
-        android:title="درباره برنامه ℹ️"
-        android:icon="@android:drawable/ic_menu_info_details"
-        android:showAsAction="never" />
-
+        android:title="تنظیمات"
+        android:icon="@drawable/ic_more_vert"
+        android:showAsAction="always" />
 </menu>
